banner text and gap under image fixed

--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -184,7 +184,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  max-height: 932px;
+  // max-height: 932px;
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -229,7 +229,7 @@
     }
     
     @media (min-width: 1800px) {
-      padding-top: 120px;
+      padding-top: 265px;
     }
 
     h1 {
